编译原理实验/实验12/第12次课/py_parse/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> segment
Rule 1     segment -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> operation
Rule 6     statement -> print
Rule 7     statement -> if
Rule 8     statement -> else
Rule 9     statement -> elif
Rule 10    statement -> while
Rule 11    statement -> break
Rule 12    statement -> for
Rule 13    statement -> function
Rule 14    statement -> runFunction
Rule 15    statement -> return
Rule 16    statement -> class
Rule 17    statement -> method
Rule 18    class -> CLASS VARIABLE { classFunctions }
Rule 19    class -> CLASS VARIABLE { }
Rule 20    classMem -> VARIABLE . VARIABLE
Rule 21    method -> classMem ( )
Rule 22    method -> classMem ( runFunctionTerms )
Rule 23    classFunctions -> function
Rule 24    classFunctions -> initClass
Rule 25    classFunctions -> classFunctions function
Rule 26    classFunctions -> classFunctions initClass
Rule 27    initClass -> DEF INIT ( runFunctionTerms ) { statements }
Rule 28    return -> RETURN
Rule 29    return -> RETURN term
Rule 30    function -> DEF VARIABLE ( functionTerms ) { statements }
Rule 31    function -> DEF VARIABLE ( ) { statements }
Rule 32    runFunction -> VARIABLE ( runFunctionTerms )
Rule 33    runFunction -> VARIABLE ( )
Rule 34    runFunctionTerms -> term
Rule 35    runFunctionTerms -> runFunctionTerms , term
Rule 36    functionTerms -> VARIABLE
Rule 37    functionTerms -> functionTerms , VARIABLE
Rule 38    break -> BREAK
Rule 39    while -> WHILE ( condition ) { statements }
Rule 40    for -> FOR ( assignment ; condition ; VARIABLE + + ) { statements }
Rule 41    if -> IF ( condition ) { statements }
Rule 42    else -> ELSE { statements }
Rule 43    elif -> ELIF ( condition ) { statements }
Rule 44    and -> condition AND condition
Rule 45    or -> condition OR condition
Rule 46    condition -> greater
Rule 47    condition -> greater_equal
Rule 48    condition -> less
Rule 49    condition -> less_equal
Rule 50    condition -> equal_equal
Rule 51    condition -> and
Rule 52    condition -> or
Rule 53    greater -> term > term
Rule 54    greater_equal -> term > = term
Rule 55    less -> term < term
Rule 56    less_equal -> term < = term
Rule 57    equal_equal -> term = = term
Rule 58    assignment -> VARIABLE = term
Rule 59    assignment -> VARIABLE = array
Rule 60    assignment -> array_term = term
Rule 61    assignment -> term = term
Rule 62    assignment -> VARIABLE + = term
Rule 63    assignment -> array_term + = term
Rule 64    assignment -> VARIABLE - = term
Rule 65    assignment -> array_term - = term
Rule 66    assignment -> VARIABLE * = term
Rule 67    assignment -> array_term * = term
Rule 68    assignment -> VARIABLE / = term
Rule 69    assignment -> array_term / = term
Rule 70    operation -> ADD
Rule 71    operation -> SUB
Rule 72    operation -> MUL
Rule 73    operation -> DIV
Rule 74    operation -> DIV_ext
Rule 75    operation -> ( operation )
Rule 76    ADD -> term + term
Rule 77    SUB -> term - term
Rule 78    MUL -> term * term
Rule 79    DIV -> term / term
Rule 80    DIV_ext -> term / / term
Rule 81    print -> PRINT ( pcontent )
Rule 82    array_term -> VARIABLE [ term ]
Rule 83    array -> [ pcontent ]
Rule 84    pcontent -> pcontent , term
Rule 85    pcontent -> term
Rule 86    string -> quote stringTerms quote
Rule 87    string -> quote quote
Rule 88    stringTerms -> String
Rule 89    stringTerms -> VARIABLE
Rule 90    stringTerms -> NUMBER
Rule 91    stringTerms -> stringTerms String
Rule 92    stringTerms -> stringTerms VARIABLE
Rule 93    stringTerms -> stringTerms NUMBER
Rule 94    term -> VARIABLE
Rule 95    term -> NUMBER
Rule 96    term -> operation
Rule 97    term -> array_term
Rule 98    term -> len
Rule 99    term -> runFunction
Rule 100   term -> method
Rule 101   term -> classMem
Rule 102   term -> string
Rule 103   len -> LEN ( VARIABLE )

Terminals, with rules where they appear

(                    : 21 22 27 30 31 32 33 39 40 41 43 75 81 103
)                    : 21 22 27 30 31 32 33 39 40 41 43 75 81 103
*                    : 66 67 78
+                    : 40 40 62 63 76
,                    : 35 37 84
-                    : 64 65 77
.                    : 20
/                    : 68 69 79 80 80
;                    : 40 40
<                    : 55 56
=                    : 54 56 57 57 58 59 60 61 62 63 64 65 66 67 68 69
>                    : 53 54
AND                  : 44
BREAK                : 38
CLASS                : 18 19
DEF                  : 27 30 31
ELIF                 : 43
ELSE                 : 42
FOR                  : 40
IF                   : 41
INIT                 : 27
LEN                  : 103
NUMBER               : 90 93 95
OR                   : 45
PRINT                : 81
RETURN               : 28 29
String               : 88 91
VARIABLE             : 18 19 20 20 30 31 32 33 36 37 40 58 59 62 64 66 68 82 89 92 94 103
WHILE                : 39
[                    : 82 83
]                    : 82 83
error                : 
quote                : 86 86 87 87
{                    : 18 19 27 30 31 39 40 41 42 43
}                    : 18 19 27 30 31 39 40 41 42 43

Nonterminals, with rules where they appear

ADD                  : 70
DIV                  : 73
DIV_ext              : 74
MUL                  : 72
SUB                  : 71
and                  : 51
array                : 59
array_term           : 60 63 65 67 69 97
assignment           : 4 40
break                : 11
class                : 16
classFunctions       : 18 25 26
classMem             : 21 22 101
condition            : 39 40 41 43 44 44 45 45
elif                 : 9
else                 : 8
equal_equal          : 50
for                  : 12
function             : 13 23 25
functionTerms        : 30 37
greater              : 46
greater_equal        : 47
if                   : 7
initClass            : 24 26
len                  : 98
less                 : 48
less_equal           : 49
method               : 17 100
operation            : 5 75 96
or                   : 52
pcontent             : 81 83 84
print                : 6
return               : 15
runFunction          : 14 99
runFunctionTerms     : 22 27 32 35
segment              : 0
statement            : 2 3
statements           : 1 2 27 30 31 39 40 41 42 43
string               : 102
stringTerms          : 86 91 92 93
term                 : 29 34 35 53 53 54 54 55 55 56 56 57 57 58 60 61 61 62 63 64 65 66 67 68 69 76 76 77 77 78 78 79 79 80 80 82 84 85
while                : 10

Parsing method: LALR

state 0

    (0) S' -> . segment
    (1) segment -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . if
    (8) statement -> . else
    (9) statement -> . elif
    (10) statement -> . while
    (11) statement -> . break
    (12) statement -> . for
    (13) statement -> . function
    (14) statement -> . runFunction
    (15) statement -> . return
    (16) statement -> . class
    (17) statement -> . method
    (58) assignment -> . VARIABLE = term
    (59) assignment -> . VARIABLE = array
    (60) assignment -> . array_term = term
    (61) assignment -> . term = term
    (62) assignment -> . VARIABLE + = term
    (63) assignment -> . array_term + = term
    (64) assignment -> . VARIABLE - = term
    (65) assignment -> . array_term - = term
    (66) assignment -> . VARIABLE * = term
    (67) assignment -> . array_term * = term
    (68) assignment -> . VARIABLE / = term
    (69) assignment -> . array_term / = term
    (70) operation -> . ADD
    (71) operation -> . SUB
    (72) operation -> . MUL
    (73) operation -> . DIV
    (74) operation -> . DIV_ext
    (75) operation -> . ( operation )
    (81) print -> . PRINT ( pcontent )
    (41) if -> . IF ( condition ) { statements }
    (42) else -> . ELSE { statements }
    (43) elif -> . ELIF ( condition ) { statements }
    (39) while -> . WHILE ( condition ) { statements }
    (38) break -> . BREAK
    (40) for -> . FOR ( assignment ; condition ; VARIABLE + + ) { statements }
    (30) function -> . DEF VARIABLE ( functionTerms ) { statements }
    (31) function -> . DEF VARIABLE ( ) { statements }
    (32) runFunction -> . VARIABLE ( runFunctionTerms )
    (33) runFunction -> . VARIABLE ( )
    (28) return -> . RETURN
    (29) return -> . RETURN term
    (18) class -> . CLASS VARIABLE { classFunctions }
    (19) class -> . CLASS VARIABLE { }
    (21) method -> . classMem ( )
    (22) method -> . classMem ( runFunctionTerms )
    (82) array_term -> . VARIABLE [ term ]
    (94) term -> . VARIABLE
    (95) term -> . NUMBER
    (96) term -> . operation
    (97) term -> . array_term
    (98) term -> . len
    (99) term -> . runFunction
    (100) term -> . method
    (101) term -> . classMem
    (102) term -> . string
    (76) ADD -> . term + term
    (77) SUB -> . term - term
    (78) MUL -> . term * term
    (79) DIV -> . term / term
    (80) DIV_ext -> . term / / term
    (20) classMem -> . VARIABLE . VARIABLE
    (103) len -> . LEN ( VARIABLE )
    (86) string -> . quote stringTerms quote
    (87) string -> . quote quote

    VARIABLE        shift and go to state 18
    (               shift and go to state 26
    PRINT           shift and go to state 27
    IF              shift and go to state 28
    ELSE            shift and go to state 29
    ELIF            shift and go to state 30
    WHILE           shift and go to state 31
    BREAK           shift and go to state 32
    FOR             shift and go to state 33
    DEF             shift and go to state 34
    RETURN          shift and go to state 35
    CLASS           shift and go to state 36
    NUMBER          shift and go to state 38
    LEN             shift and go to state 41
    quote           shift and go to state 42

    segment                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    if                             shift and go to state 7
    else                           shift and go to state 8
    elif                           shift and go to state 9
    while                          shift and go to state 10
    break                          shift and go to state 11
    for                            shift and go to state 12
    function                       shift and go to state 13
    runFunction                    shift and go to state 14
    return                         shift and go to state 15
    class                          shift and go to state 16
    method                         shift and go to state 17
    term                           shift and go to state 19
    array_term                     shift and go to state 20
    ADD                            shift and go to state 21
    SUB                            shift and go to state 22
    MUL                            shift and go to state 23
    DIV                            shift and go to state 24
    DIV_ext                        shift and go to state 25
    classMem                       shift and go to state 37
    len                            shift and go to state 39
    string                         shift and go to state 40

state 1

    (0) S' -> segment .



state 2

    (1) segment -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . if
    (8) statement -> . else
    (9) statement -> . elif
    (10) statement -> . while
    (11) statement -> . break
    (12) statement -> . for
    (13) statement -> . function
    (14) statement -> . runFunction
    (15) statement -> . return
    (16) statement -> . class
    (17) statement -> . method
    (58) assignment -> . VARIABLE = term
    (59) assignment -> . VARIABLE = array
    (60) assignment -> . array_term = term
    (61) assignment -> . term = term
    (62) assignment -> . VARIABLE + = term
    (63) assignment -> . array_term + = term
    (64) assignment -> . VARIABLE - = term
    (65) assignment -> . array_term - = term
    (66) assignment -> . VARIABLE * = term
    (67) assignment -> . array_term * = term
    (68) assignment -> . VARIABLE / = term
    (69) assignment -> . array_term / = term
    (70) operation -> . ADD
    (71) operation -> . SUB
    (72) operation -> . MUL
    (73) operation -> . DIV
    (74) operation -> . DIV_ext
    (75) operation -> . ( operation )
    (81) print -> . PRINT ( pcontent )
    (41) if -> . IF ( condition ) { statements }
    (42) else -> . ELSE { statements }
    (43) elif -> . ELIF ( condition ) { statements }
    (39) while -> . WHILE ( condition ) { statements }
    (38) break -> . BREAK
    (40) for -> . FOR ( assignment ; condition ; VARIABLE + + ) { statements }
    (30) function -> . DEF VARIABLE ( functionTerms ) { statements }
    (31) function -> . DEF VARIABLE ( ) { statements }
    (32) runFunction -> . VARIABLE ( runFunctionTerms )
    (33) runFunction -> . VARIABLE ( )
    (28) return -> . RETURN
    (29) return -> . RETURN term
    (18) class -> . CLASS VARIABLE { classFunctions }
    (19) class -> . CLASS VARIABLE { }
    (21) method -> . classMem ( )
    (22) method -> . classMem ( runFunctionTerms )
    (82) array_term -> . VARIABLE [ term ]
    (94) term -> . VARIABLE
    (95) term -> . NUMBER
    (96) term -> . operation
    (97) term -> . array_term
    (98) term -> . len
    (99) term -> . runFunction
    (100) term -> . method
    (101) term -> . classMem
    (102) term -> . string
    (76) ADD -> . term + term
    (77) SUB -> . term - term
    (78) MUL -> . term * term
    (79) DIV -> . term / term
    (80) DIV_ext -> . term / / term
    (20) classMem -> . VARIABLE . VARIABLE
    (103) len -> . LEN ( VARIABLE )
    (86) string -> . quote stringTerms quote
    (87) string -> . quote quote

    $end            reduce using rule 1 (segment -> statements .)
    VARIABLE        shift and go to state 18
    (               shift and go to state 26
    PRINT           shift and go to state 27
    IF              shift and go to state 28
    ELSE            shift and go to state 29
    ELIF            shift and go to state 30
    WHILE           shift and go to state 31
    BREAK           shift and go to state 32
    FOR             shift and go to state 33
    DEF             shift and go to state 34
    RETURN          shift and go to state 35
    CLASS           shift and go to state 36
    NUMBER          shift and go to state 38
    LEN             shift and go to state 41
    quote           shift and go to state 42

    statement                      shift and go to state 43
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    if                             shift and go to state 7
    else                           shift and go to state 8
    elif                           shift and go to state 9
    while                          shift and go to state 10
    break                          shift and go to state 11
    for                            shift and go to state 12
    function                       shift and go to state 13
    runFunction                    shift and go to state 14
    return                         shift and go to state 15
    class                          shift and go to state 16
    method                         shift and go to state 17
    term                           shift and go to state 19
    array_term                     shift and go to state 20
    ADD                            shift and go to state 21
    SUB                            shift and go to state 22
    MUL                            shift and go to state 23
    DIV                            shift and go to state 24
    DIV_ext                        shift and go to state 25
    classMem                       shift and go to state 37
    len                            shift and go to state 39
    string                         shift and go to state 40

state 3

    (3) statements -> statement .

    VARIABLE        reduce using rule 3 (statements -> statement .)
    (               reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)
    ELIF            reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    BREAK           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    CLASS           reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    LEN             reduce using rule 3 (statements -> statement .)
    quote           reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    }               reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    VARIABLE        reduce using rule 4 (statement -> assignment .)
    (               reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    ELSE            reduce using rule 4 (statement -> assignment .)
    ELIF            reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    DEF             reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    CLASS           reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    LEN             reduce using rule 4 (statement -> assignment .)
    quote           reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    }               reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> operation .
    (96) term -> operation .

    VARIABLE        reduce using rule 5 (statement -> operation .)
    (               reduce using rule 5 (statement -> operation .)
    PRINT           reduce using rule 5 (statement -> operation .)
    IF              reduce using rule 5 (statement -> operation .)
    ELSE            reduce using rule 5 (statement -> operation .)
    ELIF            reduce using rule 5 (statement -> operation .)
    WHILE           reduce using rule 5 (statement -> operation .)
    BREAK           reduce using rule 5 (statement -> operation .)
    FOR             reduce using rule 5 (statement -> operation .)
    DEF             reduce using rule 5 (statement -> operation .)
    RETURN          reduce using rule 5 (statement -> operation .)
    CLASS           reduce using rule 5 (statement -> operation .)
    NUMBER          reduce using rule 5 (statement -> operation .)
    LEN             reduce using rule 5 (statement -> operation .)
    quote           reduce using rule 5 (statement -> operation .)
    $end            reduce using rule 5 (statement -> operation .)
    }               reduce using rule 5 (statement -> operation .)
    =               reduce using rule 96 (term -> operation .)
    +               reduce using rule 96 (term -> operation .)
    -               reduce using rule 96 (term -> operation .)
    *               reduce using rule 96 (term -> operation .)
    /               reduce using rule 96 (term -> operation .)


state 6

    (6) statement -> print .

    VARIABLE        reduce using rule 6 (statement -> print .)
    (               reduce using rule 6 (statement -> print .)
    PRINT           reduce using rule 6 (statement -> print .)
    IF              reduce using rule 6 (statement -> print .)
    ELSE            reduce using rule 6 (statement -> print .)
    ELIF            reduce using rule 6 (statement -> print .)
    WHILE           reduce using rule 6 (statement -> print .)
    BREAK           reduce using rule 6 (statement -> print .)
    FOR             reduce using rule 6 (statement -> print .)
    DEF             reduce using rule 6 (statement -> print .)
    RETURN          reduce using rule 6 (statement -> print .)
    CLASS           reduce using rule 6 (statement -> print .)
    NUMBER          reduce using rule 6 (statement -> print .)
    LEN             reduce using rule 6 (statement -> print .)
    quote           reduce using rule 6 (statement -> print .)
    $end            reduce using rule 6 (statement -> print .)
    }               reduce using rule 6 (statement -> print .)


state 7

    (7) statement -> if .

    VARIABLE        reduce using rule 7 (statement -> if .)
    (               reduce using rule 7 (statement -> if .)
    PRINT           reduce using rule 7 (statement -> if .)
    IF              reduce using rule 7 (statement -> if .)
    ELSE            reduce using rule 7 (statement -> if .)
    ELIF            reduce using rule 7 (statement -> if .)
    WHILE           reduce using rule 7 (statement -> if .)
    BREAK           reduce using rule 7 (statement -> if .)
    FOR             reduce using rule 7 (statement -> if .)
    DEF             reduce using rule 7 (statement -> if .)
    RETURN          reduce using rule 7 (statement -> if .)
    CLASS           reduce using rule 7 (statement -> if .)
    NUMBER          reduce using rule 7 (statement -> if .)
    LEN             reduce using rule 7 (statement -> if .)
    quote           reduce using rule 7 (statement -> if .)
    $end            reduce using rule 7 (statement -> if .)
    }               reduce using rule 7 (statement -> if .)


state 8

    (8) statement -> else .

    VARIABLE        reduce using rule 8 (statement -> else .)
    (               reduce using rule 8 (statement -> else .)
    PRINT           reduce using rule 8 (statement -> else .)
    IF              reduce using rule 8 (statement -> else .)
    ELSE            reduce using rule 8 (statement -> else .)
    ELIF            reduce using rule 8 (statement -> else .)
    WHILE           reduce using rule 8 (statement -> else .)
    BREAK           reduce using rule 8 (statement -> else .)
    FOR             reduce using rule 8 (statement -> else .)
    DEF             reduce using rule 8 (statement -> else .)
    RETURN          reduce using rule 8 (statement -> else .)
    CLASS           reduce using rule 8 (statement -> else .)
    NUMBER          reduce using rule 8 (statement -> else .)
    LEN             reduce using rule 8 (statement -> else .)
    quote           reduce using rule 8 (statement -> else .)
    $end            reduce using rule 8 (statement -> else .)
    }               reduce using rule 8 (statement -> else .)


state 9

    (9) statement -> elif .

    VARIABLE        reduce using rule 9 (statement -> elif .)
    (               reduce using rule 9 (statement -> elif .)
    PRINT           reduce using rule 9 (statement -> elif .)
    IF              reduce using rule 9 (statement -> elif .)
    ELSE            reduce using rule 9 (statement -> elif .)
    ELIF            reduce using rule 9 (statement -> elif .)
    WHILE           reduce using rule 9 (statement -> elif .)
    BREAK           reduce using rule 9 (statement -> elif .)
    FOR             reduce using rule 9 (statement -> elif .)
    DEF             reduce using rule 9 (statement -> elif .)
    RETURN          reduce using rule 9 (statement -> elif .)
    CLASS           reduce using rule 9 (statement -> elif .)
    NUMBER          reduce using rule 9 (statement -> elif .)
    LEN             reduce using rule 9 (statement -> elif .)
    quote           reduce using rule 9 (statement -> elif .)
    $end            reduce using rule 9 (statement -> elif .)
    }               reduce using rule 9 (statement -> elif .)


state 10

    (10) statement -> while .

    VARIABLE        reduce using rule 10 (statement -> while .)
    (               reduce using rule 10 (statement -> while .)
    PRINT           reduce using rule 10 (statement -> while .)
    IF              reduce using rule 10 (statement -> while .)
    ELSE            reduce using rule 10 (statement -> while .)
    ELIF            reduce using rule 10 (statement -> while .)
    WHILE           reduce using rule 10 (statement -> while .)
    BREAK           reduce using rule 10 (statement -> while .)
    FOR             reduce using rule 10 (statement -> while .)
    DEF             reduce using rule 10 (statement -> while .)
    RETURN          reduce using rule 10 (statement -> while .)
    CLASS           reduce using rule 10 (statement -> while .)
    NUMBER          reduce using rule 10 (statement -> while .)
    LEN             reduce using rule 10 (statement -> while .)
    quote           reduce using rule 10 (statement -> while .)
    $end            reduce using rule 10 (statement -> while .)
    }               reduce using rule 10 (statement -> while .)


state 11

    (11) statement -> break .

    VARIABLE        reduce using rule 11 (statement -> break .)
    (               reduce using rule 11 (statement -> break .)
    PRINT           reduce using rule 11 (statement -> break .)
    IF              reduce using rule 11 (statement -> break .)
    ELSE            reduce using rule 11 (statement -> break .)
    ELIF            reduce using rule 11 (statement -> break .)
    WHILE           reduce using rule 11 (statement -> break .)
    BREAK           reduce using rule 11 (statement -> break .)
    FOR             reduce using rule 11 (statement -> break .)
    DEF             reduce using rule 11 (statement -> break .)
    RETURN          reduce using rule 11 (statement -> break .)
    CLASS           reduce using rule 11 (statement -> break .)
    NUMBER          reduce using rule 11 (statement -> break .)
    LEN             reduce using rule 11 (statement -> break .)
    quote           reduce using rule 11 (statement -> break .)
    $end            reduce using rule 11 (statement -> break .)
    }               reduce using rule 11 (statement -> break .)


state 12

    (12) statement -> for .
